# readux-ingest-ecds

./: .pylintrc  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yml
readux_ingest_ecds/: __init__.py  admin.py  apps.py  celery.py  forms.py  helpers.py  mail.py  models.py  services.py  storages.py  task_utils.py  tasks.py
readux_ingest_ecds/management/commands/: add_ocr.py
readux_ingest_ecds/migrations/: 0001_initial.py  0001_squashed_0005_alter_bulk_volume_files.py  0002_auto_20240201_1406.py  0002_local_bulk.py  0003_auto_20240313_1737.py  0003_bulk_metadata_file.py  0004_auto_20240313_1739.py  0004_s3ingest.py  0005_alter_bulk_volume_files.py  0005_local_warnings.py
readux_ingest_ecds/services/: file_services.py  iiif_services.py  metadata_services.py  ocr_services.py  services.py
readux_ingest_ecds/templates/: ingest_ecds_failure_email.html  ingest_ecds_failure_email.txt  ingest_ecds_success_email.html  ingest_ecds_success_email.txt
test_app/: pytest.ini  requirements.txt
test_app/fixtures/: alto4.xml  extra_metadata.csv  metadata.csv  multi_volume_metadata.csv  s3_pid_list.csv
test_app/fixtures/bulk/: metadata.csv  metadata_admin_test.csv
test_app/fixtures/metadata/: metadata.csv
test_app/iiif/: admin.py  apps.py  models.py
test_app/iiif/migrations/: 0001_initial.py  0002_ocr.py  (+10 more)
test_app/test_app/: settings.py  urls.py
test_app/tests/: factories.py  test_admin.py  test_bulk.py  test_bulk_admin.py  test_iiif_services.py  test_local.py  test_local_admin.py  test_metadata_services.py  test_ocr.py  test_s3.py  test_tasks.py
(+2 files in other folders)
