[metadata]
name = readux-ingest-ecds
version = 0.1
description = A Django app for Readux ingest specific to ECDS infrastructure.
long_description = file: README.md
url = https://github.com/ecds/readux-ingest-ecds
author = Emory Center for Digital Scholarship
author_email = jay.varner@emory.edu
license = Apache-2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2.0,<4.0
    tablib
    tablib[xlsx]
    django-celery-results~=2.4.0
    boto3
    Pillow==9.4.0 # wagtail 4.2.4 depends on Pillow<10.0.0 and >=4.0.0
